# Autonomous_Lawn_Mower

./: CMakeLists.txt  LICENSE  README.md  doxy_config  package.xml  run_cppcheck.sh  run_cpplint.sh
data/: waypoints.csv  waypoints.txt  waypoints_test.csv
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
include/: LawnMower.h  NavigationUtils.h  Teleop.h
launch/: launch_in_world.launch  move_base.launch  mow.launch  mower.launch  spawn.launch  teleop_alm.launch  turtlebot3_navigation.launch
map/: my_map.pgm
results/: cppcheck_test.txt  cpplint_test.txt
src/: LawnMower.cpp  NavigationUtils.cpp  RunMower.cpp  Teleop.cpp
test/: LawnMowerTest.cpp  NavigationUtilsTest.cpp  custom_rosconsole.conf  main.cpp  test.launch
worlds/: gazebo.world
